changed pom file